--- a/XV/index.html
+++ b/XV/index.html
@@ -14,13 +14,11 @@
   <body>
     <!-- 🎶 Música de fondo -->
     <audio id="bgMusic" autoplay loop>
-      <source src="music/XV-Tangled.mp3" type="audio/mpeg">
+      <source src="music/XV-Tangled.mp3" type="audio/mpeg" autoplay loop/>
       Tu navegador no soporta audio.
     </audio>
 
     <!-- Botón flotante para activar música (se oculta si no es necesario) -->
-    <button id="playBtn" class="music-btn" style="display:none;">🎵 Activar Música</button>
-
     <div class="hero">
       <!-- Efectos -->
       <div class="particles-container" id="particlesContainer"></div>
