--- a/XV/index.html
+++ b/XV/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <!-- Música de fondo -->
-    <audio id="bgMusic" src="music/XV-Tangled.mp3" autoplay loop muted playsinline></audio>
+    <audio id="bgMusic" src="music/XV-Tangled.mp3" autoplay loop playsinline></audio>
 
     <div class="hero">
       <div class="particles-container" id="particlesContainer"></div>
