--- a/XV/index.html
+++ b/XV/index.html
@@ -84,10 +84,22 @@
         <div class="countdown-container">
           <h3 class="countdown-title">Faltan:</h3>
           <div class="countdown" id="countdown">
-            <div><span id="days">00</span><span>Días</span></div>
-            <div><span id="hours">00</span><span>Horas</span></div>
-            <div><span id="minutes">00</span><span>Minutos</span></div>
-            <div><span id="seconds">00</span><span>Segundos</span></div>
+            <div class="countdown-item">
+              <span class="countdown-number" id="days">00</span>
+              <span class="countdown-label">Días</span>
+            </div>
+            <div class="countdown-item">
+              <span class="countdown-number" id="hours">00</span>
+              <span class="countdown-label">Horas</span>
+            </div>
+            <div class="countdown-item">
+              <span class="countdown-number" id="minutes">00</span>
+              <span class="countdown-label">Minutos</span>
+            </div>
+            <div class="countdown-item">
+              <span class="countdown-number" id="seconds">00</span>
+              <span class="countdown-label">Segundos</span>
+            </div>
           </div>
         </div>
       </div>
