--- a/XV/index.html
+++ b/XV/index.html
@@ -9,10 +9,8 @@
     <link rel="shortcut icon" href="img/sun.png" type="image/x-icon">
   </head>
   <body>
-    <!-- Música de fondo -->
     <audio id="bgMusic" src="music/XV-Tangled.mp3" loop muted playsinline></audio>
 
-    <!-- Botón flotante de música -->
     <button id="musicToggle" class="music-btn paused" aria-label="Controlar música">
       <span class="icon-play"></span>
       <span class="icon-pause"></span>
@@ -48,7 +46,7 @@
         </div>
 
         <p class="lead">
-          Con mucha alegría te invito a celebrar conmigo<br>
+          Con mucha alegría te invito a celebrar conmigo
           una noche llena de magia, luz y sueños por cumplir.
         </p>
 
@@ -64,21 +62,9 @@
           </div>
         </div>
 
-        <div class="button-container">
-          <a class="btn" href="https://tusitio.com/rsvp" target="_blank">Confirmar Asistencia</a>
-        </div>
-
         <div class="map-container">
-          <h3 class="map-title">¿Cómo llegar?</h3>
-          <div class="map-wrapper">
-            <iframe 
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.841548083949!2d-74.08175!3d4.60971"
-              width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy">
-            </iframe>
-            <div class="map-overlay" id="mapOverlay">
-              <p>Toca para ver el mapa</p>
-            </div>
-          </div>
+          <h3 class="map-title">¡El color morado está reservado para la quinceañera!</h3>
+          <div class="map-wrapper" id="mailRain"></div>
         </div>
 
         <div class="countdown-container">
