--- a/XV/index.html
+++ b/XV/index.html
@@ -60,6 +60,10 @@
           <div class="detail-item">
             <strong>📍 Lugar:</strong> Finca La Armonía en Todos los Santos
           </div>
+          <div class="detail-item">
+            <strong>⛪ Fecha de la Misa:</strong> 11 de Octubre, 2025 a las 6:00 PM<br>
+            Parroquia San Pedro Apóstol
+          </div>
         </div>
 
         <div class="map-container">
