--- a/Restaurant/FARO/index.html
+++ b/Restaurant/FARO/index.html
@@ -771,7 +771,7 @@
                 </div>
                 
                 <div class="contacto-mapa">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15904.707572765873!2d-76.2427514!3d4.0268576!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e388d264e098801%3A0xc68291a18c66938a!2sRestaurante%20Campestre%20El%20Faro%20-%20Criadero%20Los%203!5e0!3m2!1sen!2sco!4v1709230571876!5m2!1sen!2sco" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Ubicación de Restaurante Campestre El Faro"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d497.5128594774487!2d-76.22827264489578!3d3.999268618934274!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e39c300678e309f%3A0xa0750966e8956d11!2sRestaurante%20campestre%20criadero%20los%20tres!5e0!3m2!1ses-419!2sco!4v1761970029102!5m2!1ses-419!2sco" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Ubicación de Restaurante Campestre El Faro"></iframe>
                 </div>
             </div>
         </div>
